--- a/Weather/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Weather/Base.lproj/Main.storyboard
@@ -71,6 +71,9 @@
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4DI-cs-t6n">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <connections>
+                                    <outlet property="delegate" destination="iOd-XR-Dwt" id="4CQ-R6-R8Y"/>
+                                </connections>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -83,10 +86,149 @@
                         <viewLayoutGuide key="safeArea" id="Qet-IU-avL"/>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="mapViewMain" destination="4DI-cs-t6n" id="sMC-oX-b9H"/>
+                        <segue destination="FrI-KA-Bbg" kind="show" identifier="sid_weather_details" id="S0n-DS-cjS"/>
+                        <segue destination="1sX-Id-aXZ" kind="show" identifier="sid_history" id="NlN-wd-mWQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nYA-rY-fGh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="895.20000000000005" y="26.53673163418291"/>
+        </scene>
+        <!--History View Controller-->
+        <scene sceneID="v9m-id-dip">
+            <objects>
+                <viewController id="1sX-Id-aXZ" customClass="HistoryViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aK2-Vg-XbA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="A3B-Xn-2id">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="zJR-uz-riY"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eAg-Xe-eTs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="893.60000000000002" y="791.15442278860576"/>
+        </scene>
+        <!--Weather Details View Controller-->
+        <scene sceneID="CMz-wZ-UTQ">
+            <objects>
+                <viewController id="FrI-KA-Bbg" customClass="WeatherDetailsViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="P1W-QF-8WE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yVO-fG-mI5">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YUf-17-EDS">
+                                        <rect key="frame" x="17" y="22" width="80" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="Jsi-hF-SMb"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="()" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xc-GL-iuA">
+                                        <rect key="frame" x="105" y="20" width="249" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DEJ-0f-f62">
+                                        <rect key="frame" x="17" y="49" width="80" height="15"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUJ-to-rTp">
+                                        <rect key="frame" x="105" y="47" width="249" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EJo-iA-ZhH">
+                                        <rect key="frame" x="17" y="76" width="80" height="15"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQI-nH-am2">
+                                        <rect key="frame" x="105" y="74" width="249" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wind" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTR-Sm-gSt">
+                                        <rect key="frame" x="17" y="103" width="80" height="15"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w3e-Ot-b0d">
+                                        <rect key="frame" x="105" y="101" width="249" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="w3e-Ot-b0d" firstAttribute="trailing" secondItem="fQI-nH-am2" secondAttribute="trailing" id="4ar-ro-a3p"/>
+                                    <constraint firstItem="YUf-17-EDS" firstAttribute="leading" secondItem="yVO-fG-mI5" secondAttribute="leading" constant="17" id="9uE-o4-0I0"/>
+                                    <constraint firstItem="oUJ-to-rTp" firstAttribute="trailing" secondItem="3xc-GL-iuA" secondAttribute="trailing" id="FB3-H6-eTo"/>
+                                    <constraint firstItem="RTR-Sm-gSt" firstAttribute="bottom" secondItem="w3e-Ot-b0d" secondAttribute="bottom" id="MVT-dR-b0V"/>
+                                    <constraint firstItem="fQI-nH-am2" firstAttribute="leading" secondItem="oUJ-to-rTp" secondAttribute="leading" id="QBl-TE-3XP"/>
+                                    <constraint firstItem="oUJ-to-rTp" firstAttribute="top" secondItem="3xc-GL-iuA" secondAttribute="bottom" constant="10" id="RvF-0J-bkg"/>
+                                    <constraint firstItem="oUJ-to-rTp" firstAttribute="leading" secondItem="3xc-GL-iuA" secondAttribute="leading" id="X7v-4a-G6u"/>
+                                    <constraint firstItem="RTR-Sm-gSt" firstAttribute="leading" secondItem="EJo-iA-ZhH" secondAttribute="leading" id="Xfr-Lg-d7g"/>
+                                    <constraint firstItem="RTR-Sm-gSt" firstAttribute="width" secondItem="EJo-iA-ZhH" secondAttribute="width" id="eKt-UN-ClE"/>
+                                    <constraint firstAttribute="trailing" secondItem="3xc-GL-iuA" secondAttribute="trailing" constant="21" id="epG-dv-iTz"/>
+                                    <constraint firstItem="oUJ-to-rTp" firstAttribute="bottom" secondItem="DEJ-0f-f62" secondAttribute="bottom" id="eqJ-Dj-oUm"/>
+                                    <constraint firstItem="3xc-GL-iuA" firstAttribute="bottom" secondItem="YUf-17-EDS" secondAttribute="bottom" id="gVM-tU-axK"/>
+                                    <constraint firstItem="DEJ-0f-f62" firstAttribute="width" secondItem="YUf-17-EDS" secondAttribute="width" id="ga6-A4-cNQ"/>
+                                    <constraint firstItem="3xc-GL-iuA" firstAttribute="leading" secondItem="YUf-17-EDS" secondAttribute="trailing" constant="8" id="gx2-Yd-76K"/>
+                                    <constraint firstItem="DEJ-0f-f62" firstAttribute="leading" secondItem="YUf-17-EDS" secondAttribute="leading" id="i3Y-zc-xNw"/>
+                                    <constraint firstItem="fQI-nH-am2" firstAttribute="trailing" secondItem="oUJ-to-rTp" secondAttribute="trailing" id="igF-Iu-3Vy"/>
+                                    <constraint firstItem="EJo-iA-ZhH" firstAttribute="leading" secondItem="DEJ-0f-f62" secondAttribute="leading" id="kwj-KP-vIg"/>
+                                    <constraint firstItem="w3e-Ot-b0d" firstAttribute="leading" secondItem="fQI-nH-am2" secondAttribute="leading" id="lzT-Sw-AkI"/>
+                                    <constraint firstItem="3xc-GL-iuA" firstAttribute="top" secondItem="yVO-fG-mI5" secondAttribute="top" constant="20" id="mBX-zY-mgv"/>
+                                    <constraint firstItem="EJo-iA-ZhH" firstAttribute="width" secondItem="DEJ-0f-f62" secondAttribute="width" id="oax-fy-siR"/>
+                                    <constraint firstItem="fQI-nH-am2" firstAttribute="top" secondItem="oUJ-to-rTp" secondAttribute="bottom" constant="10" id="w35-mk-Daf"/>
+                                    <constraint firstItem="w3e-Ot-b0d" firstAttribute="top" secondItem="fQI-nH-am2" secondAttribute="bottom" constant="10" id="wVz-xj-pvB"/>
+                                    <constraint firstItem="fQI-nH-am2" firstAttribute="bottom" secondItem="EJo-iA-ZhH" secondAttribute="bottom" id="wmV-N8-rh9"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="yVO-fG-mI5" firstAttribute="bottom" secondItem="rnB-Bf-I8N" secondAttribute="bottom" id="1Bx-4L-Une"/>
+                            <constraint firstItem="yVO-fG-mI5" firstAttribute="top" secondItem="rnB-Bf-I8N" secondAttribute="top" id="b7T-q0-p8e"/>
+                            <constraint firstItem="yVO-fG-mI5" firstAttribute="trailing" secondItem="rnB-Bf-I8N" secondAttribute="trailing" id="c9h-1e-RV8"/>
+                            <constraint firstItem="yVO-fG-mI5" firstAttribute="leading" secondItem="rnB-Bf-I8N" secondAttribute="leading" id="v6e-OH-5lz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="rnB-Bf-I8N"/>
+                    </view>
+                    <connections>
+                        <outlet property="labelLocation" destination="3xc-GL-iuA" id="LXL-pD-ehd"/>
+                        <outlet property="labelTemperature" destination="fQI-nH-am2" id="3AG-4h-oub"/>
+                        <outlet property="labelWeather" destination="oUJ-to-rTp" id="7yE-T4-2Er"/>
+                        <outlet property="labelWind" destination="w3e-Ot-b0d" id="eIJ-Io-N1k"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U2s-4F-aTR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1788" y="26.53673163418291"/>
         </scene>
     </scenes>
 </document>
