--- a/Weather/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Weather/Base.lproj/Main.storyboard
@@ -104,16 +104,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="A3B-Xn-2id">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="A3B-Xn-2id">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HistoryCell" id="xzQ-Qm-OxX">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xzQ-Qm-OxX" id="jFy-0d-bnY">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8lu-mr-dye">
+                                                    <rect key="frame" x="24" y="13" width="38" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="at3-3U-xQv">
+                                                    <rect key="frame" x="304" y="14.5" width="31" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="8lu-mr-dye" firstAttribute="leading" secondItem="jFy-0d-bnY" secondAttribute="leading" constant="24" id="Nj1-WA-exb"/>
+                                                <constraint firstItem="8lu-mr-dye" firstAttribute="centerY" secondItem="jFy-0d-bnY" secondAttribute="centerY" id="WQH-o0-X1p"/>
+                                                <constraint firstItem="at3-3U-xQv" firstAttribute="centerY" secondItem="jFy-0d-bnY" secondAttribute="centerY" id="YGu-xG-JvN"/>
+                                                <constraint firstAttribute="trailing" secondItem="at3-3U-xQv" secondAttribute="trailing" constant="7" id="yoT-4q-3UP"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="1sX-Id-aXZ" id="DDf-MR-rXh"/>
+                                    <outlet property="delegate" destination="1sX-Id-aXZ" id="q03-en-pVf"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="A3B-Xn-2id" firstAttribute="bottom" secondItem="zJR-uz-riY" secondAttribute="bottom" id="MwD-oQ-p3F"/>
+                            <constraint firstItem="A3B-Xn-2id" firstAttribute="trailing" secondItem="zJR-uz-riY" secondAttribute="trailing" id="ZhE-8u-JI0"/>
+                            <constraint firstItem="A3B-Xn-2id" firstAttribute="top" secondItem="zJR-uz-riY" secondAttribute="top" id="b80-7P-8Pb"/>
+                            <constraint firstItem="A3B-Xn-2id" firstAttribute="leading" secondItem="zJR-uz-riY" secondAttribute="leading" id="zXh-Gt-0sS"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="zJR-uz-riY"/>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableViewHistory" destination="A3B-Xn-2id" id="hzq-y5-pkV"/>
+                        <segue destination="FrI-KA-Bbg" kind="show" identifier="sid_weather_details" id="1hk-mq-VCG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eAg-Xe-eTs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -231,4 +274,7 @@
             <point key="canvasLocation" x="1788" y="26.53673163418291"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="1hk-mq-VCG"/>
+    </inferredMetricsTieBreakers>
 </document>
