--- a/Weather/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Weather/Base.lproj/Main.storyboard
@@ -195,7 +195,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUJ-to-rTp">
-                                        <rect key="frame" x="105" y="47" width="249" height="17"/>
+                                        <rect key="frame" x="105" y="47" width="63.5" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -207,7 +207,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQI-nH-am2">
-                                        <rect key="frame" x="105" y="74" width="249" height="17"/>
+                                        <rect key="frame" x="105" y="74" width="63.5" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -219,21 +219,29 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w3e-Ot-b0d">
-                                        <rect key="frame" x="105" y="101" width="249" height="17"/>
+                                        <rect key="frame" x="105" y="101" width="63.5" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wR8-uS-gpd">
+                                        <rect key="frame" x="188.5" y="40.5" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="5uM-ON-5OE"/>
+                                            <constraint firstAttribute="height" constant="30" id="fD0-bX-CLh"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="w3e-Ot-b0d" firstAttribute="trailing" secondItem="fQI-nH-am2" secondAttribute="trailing" id="4ar-ro-a3p"/>
+                                    <constraint firstItem="wR8-uS-gpd" firstAttribute="leading" secondItem="oUJ-to-rTp" secondAttribute="trailing" constant="20" id="9Qe-dx-tts"/>
                                     <constraint firstItem="YUf-17-EDS" firstAttribute="leading" secondItem="yVO-fG-mI5" secondAttribute="leading" constant="17" id="9uE-o4-0I0"/>
-                                    <constraint firstItem="oUJ-to-rTp" firstAttribute="trailing" secondItem="3xc-GL-iuA" secondAttribute="trailing" id="FB3-H6-eTo"/>
                                     <constraint firstItem="RTR-Sm-gSt" firstAttribute="bottom" secondItem="w3e-Ot-b0d" secondAttribute="bottom" id="MVT-dR-b0V"/>
                                     <constraint firstItem="fQI-nH-am2" firstAttribute="leading" secondItem="oUJ-to-rTp" secondAttribute="leading" id="QBl-TE-3XP"/>
                                     <constraint firstItem="oUJ-to-rTp" firstAttribute="top" secondItem="3xc-GL-iuA" secondAttribute="bottom" constant="10" id="RvF-0J-bkg"/>
                                     <constraint firstItem="oUJ-to-rTp" firstAttribute="leading" secondItem="3xc-GL-iuA" secondAttribute="leading" id="X7v-4a-G6u"/>
+                                    <constraint firstItem="wR8-uS-gpd" firstAttribute="centerY" secondItem="oUJ-to-rTp" secondAttribute="centerY" id="XE1-Fq-zk3"/>
                                     <constraint firstItem="RTR-Sm-gSt" firstAttribute="leading" secondItem="EJo-iA-ZhH" secondAttribute="leading" id="Xfr-Lg-d7g"/>
                                     <constraint firstItem="RTR-Sm-gSt" firstAttribute="width" secondItem="EJo-iA-ZhH" secondAttribute="width" id="eKt-UN-ClE"/>
                                     <constraint firstAttribute="trailing" secondItem="3xc-GL-iuA" secondAttribute="trailing" constant="21" id="epG-dv-iTz"/>
@@ -242,7 +250,6 @@
                                     <constraint firstItem="DEJ-0f-f62" firstAttribute="width" secondItem="YUf-17-EDS" secondAttribute="width" id="ga6-A4-cNQ"/>
                                     <constraint firstItem="3xc-GL-iuA" firstAttribute="leading" secondItem="YUf-17-EDS" secondAttribute="trailing" constant="8" id="gx2-Yd-76K"/>
                                     <constraint firstItem="DEJ-0f-f62" firstAttribute="leading" secondItem="YUf-17-EDS" secondAttribute="leading" id="i3Y-zc-xNw"/>
-                                    <constraint firstItem="fQI-nH-am2" firstAttribute="trailing" secondItem="oUJ-to-rTp" secondAttribute="trailing" id="igF-Iu-3Vy"/>
                                     <constraint firstItem="EJo-iA-ZhH" firstAttribute="leading" secondItem="DEJ-0f-f62" secondAttribute="leading" id="kwj-KP-vIg"/>
                                     <constraint firstItem="w3e-Ot-b0d" firstAttribute="leading" secondItem="fQI-nH-am2" secondAttribute="leading" id="lzT-Sw-AkI"/>
                                     <constraint firstItem="3xc-GL-iuA" firstAttribute="top" secondItem="yVO-fG-mI5" secondAttribute="top" constant="20" id="mBX-zY-mgv"/>
@@ -263,6 +270,7 @@
                         <viewLayoutGuide key="safeArea" id="rnB-Bf-I8N"/>
                     </view>
                     <connections>
+                        <outlet property="imageViewWeatherIcon" destination="wR8-uS-gpd" id="Jvx-OD-tEY"/>
                         <outlet property="labelLocation" destination="3xc-GL-iuA" id="LXL-pD-ehd"/>
                         <outlet property="labelTemperature" destination="fQI-nH-am2" id="3AG-4h-oub"/>
                         <outlet property="labelWeather" destination="oUJ-to-rTp" id="7yE-T4-2Er"/>
